2008-12-31  Ulrich Drepper  <drepper@redhat.com>

	* i386_parse.y (struct argstring): Add off element.
	(off_op_str): New global variable.
	(print_op_str): Print strings as concatenated strings.  Keep track
	of index and length.  Update ->off element.
	(print_op_str_idx): New function.
	(instrtable_out): Mark op%d_fct as const.
	Emit two tables for the strings: the string itself (op%d_str) and the
	index table (op%d_str_idx).
	* i386_disasm.c (i386_disasm): Adjust for new op%d_str definition.

	* i386_disasm.c [X86_64] (i386_disasm): Handle rex prefix when
	printing only prefix.

	* i386_disasm.c (i386_disasm): Minor optimizations.

	* i386_parse.y (instrtable_out): No need to emit index, the reader can
	keep track.
	* i386_disasm.c (i386_disasm): The index is not emitted anymore, no
	need to skip it.

	* i386_disasm.c (amd3dnow): Mark as const.

	* defs/i386: Add blendvpd and blendvps opcodes.

2008-12-30  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: Add blendpd and blendps opcodes.

2008-12-19  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: Add entry for AMD 3DNOW.
	* i386_disasm.c: Implement AMD 3DNOW disassembly.

2008-12-17  Ulrich Drepper  <drepper@redhat.com>

	* i386_disasm.c (i386_disasm): If instruction matches prefix,
	undoing the prefix match finishes the instruction.

2008-01-21  Roland McGrath  <roland@redhat.com>

	* defs/i386: Fix typo in comment.
	* i386_disasm.c (i386_disasm): Handle cltq, cqto.

	* i386_parse.y: Add sanity check for NMNES macro value.
	* Makefile.am (i386_parse.o): Fix target in dependency rule.
	(i386_parse.h): New target with empty commands.
	(i386_lex.o): Depend on it in place of i386_parse.c.

2008-01-21  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am (EXTRA_DIST): Remove defs/x86_64.

2008-01-14  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: Add fixes for opcodes with register number in opcode,
	64-bit immediate forms, nop with rex.B.
	* i386_data.h [X86_64] (FCT_imm64$w): New function.